log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 08:57:54 PM UTC: 
 tests:  0|6
total_score: 0/70
5da1276
Thu 30 Mar 2023 09:27:22 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a75288c
Thu 30 Mar 2023 09:27:58 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
32ddc15
Thu 30 Mar 2023 09:28:21 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
afc29e9
Thu 30 Mar 2023 09:29:57 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
f89fc88
Thu 30 Mar 2023 09:31:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7226718
Thu 30 Mar 2023 09:32:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:48: error: ‘capacity’ undeclared (first use in this function)
   18 |     nuevo->data = (void *) malloc(sizeof(void)*capacity);
      |                                                ^~~~~~~~
arraylist.c:18:48: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1527b64
Thu 30 Mar 2023 09:32:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
17ef1dd
Thu 30 Mar 2023 09:32:58 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3fbea50
